--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Casousel</h1>
         <div class="carousel">
             <div class="carousel-item carousel-item-visible">
                 <img src="images/1.jpg" />
